# llm-fit-check

./: .gitignore  README.md  pyproject.toml
.github/workflows/: refresh.yml
scripts/: aliases.yaml  footprints.yaml  refresh_snapshot.py
src/llm_fit_check/: __init__.py  catalog.py  cli.py  hardware.py  recommend.py
src/llm_fit_check/data/: snapshot.json
tests/: test_recommend.py
