[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-fit-check"
version = "0.1.1"
description = "One line: which open-source LLM works best on your local machine today."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "llm-fit-check contributors" }]
keywords = ["llm", "local", "ollama", "leaderboard", "recommendation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "psutil>=5.9",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
nvidia = ["pynvml>=11.5"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
llm-fit-check = "llm_fit_check.cli:app"

[project.urls]
Homepage = "https://github.com/shishiranataraj/llm-fit-check"
Issues = "https://github.com/shishiranataraj/llm-fit-check/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_fit_check"]

[tool.hatch.build.targets.wheel.force-include]
"src/llm_fit_check/data/snapshot.json" = "llm_fit_check/data/snapshot.json"
